<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_phone_number_description">Wpisz swój numer telefonu, aby otrzymywać specjalne nagrody i powiadomienia SMS.</string>
    <string name="add_phone_number_title">Dodaj numer telefonu</string>
    <string name="allow">Zezwól</string>
    <string name="app_name">żappka</string>
    <string name="app_version">Wersja v%1$s (%2$d)</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="barcode_description">W trakcie skanowania produktów, pokaż swój kod kreskowy kasjerowi, aby otrzymać żappsy.</string>
    <string name="barcode_loading_error">Nie udało się pobrać kodu kreskowego. Spróbuj ponownie później.</string>
    <string name="barcode_title">Zeskanuj swój kod kreskowy</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Anuluj</string>
    <string name="change_email_link_prefix">/view/changeEmail</string>
    <string name="change_password_description">Aby zmienić hasło na nowe, podaj najpierw obecne hasło.</string>
    <string name="change_password_successful_message">Hasło zostało zmienione</string>
    <string name="change_password_title">Zmiana hasła</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Zamknij</string>
    <string name="com.crashlytics.android.build_id">f3980bf3-b42f-4ee9-9c34-4ca24f939a51</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="gender_female">Kobieta</string>
    <string name="gender_male">Mężczyzna</string>
    <string name="gender_not_specified">-</string>
    <string name="my_profile_birth_date_header">Data urodzenia</string>
    <string name="my_profile_birth_date_hint">Dodaj datę</string>
    <string name="my_profile_delete_account">Usuń konto</string>
    <string name="my_profile_delete_account_description">Usuń swoje konto żappki wraz z całą zawartością. Uważaj – zmiany będą nieodwracalne.</string>
    <string name="my_profile_email_header">E-mail</string>
    <string name="my_profile_email_hint">Dodaj E-mail</string>
    <string name="my_profile_gender_header">Płeć</string>
    <string name="my_profile_gender_hint">Dodaj płeć</string>
    <string name="my_profile_name_header">Imię</string>
    <string name="my_profile_name_hint">Dodaj imię</string>
    <string name="my_profile_phone_header">Numer telefonu</string>
    <string name="my_profile_phone_hint">Dodaj numer</string>
    <string name="registration_agreement1">Zgoda marketingowa</string>
    <string name="registration_agreement2">Zgoda na przetwarzanie danych</string>
    <string name="registration_agreement3">Zgoda na RODO</string>
    <string name="registration_agreement_marketing_email_expanded">Zgodę można wycofać w każdym czasie (np. drogą elektroniczną lub pisemną), co nie wpływa na zgodność z prawem przetwarzania dokonanego przed jej wycofaniem.</string>
    <string name="registration_agreement_marketing_email_short">Wyrażam zgodę na kierowanie do mnie przez Żabka Polska sp. z o.o. treści marketingowych dotyczących jej towarów i usług za pośrednictwem e-mail. (zgoda nieobowiązkowa)</string>
    <string name="registration_agreement_marketing_third_parties_expanded">Zgoda obejmuje partnerów Żabka Polska sp. z o.o., takich jak: dostawcy towarów i usług oferowanych w sklepach Żabka, dostawcy towarów i usług oferowanych w ramach katalogu nagród aplikacji, operatorzy telekomunikacyjni, platformy mediów społecznościowych, subskrybcyjne platformy internetowe (np. netflix, spotify), podmioty operujące platformami w ramach ekonomii współdzielenia, banki, operatorzy płatności i kart płatniczych, firmy kurierskie i operatorzy pocztowi. Zgodę można wycofać w każdym czasie (np. drogą elektroniczną lub pisemną), co nie wpływa na zgodność z prawem przetwarzania dokonanego przed jej wycofaniem.</string>
    <string name="registration_agreement_marketing_third_parties_short">Wyrażam zgodę na udostępnienie moich danych osobowych partnerom Żabka Polska sp. z o.o., w celu prowadzenia marketingu własnego tych podmiotów za pośrednictwem e-mail (zgoda nieobowiązkowa)</string>
    <string name="registration_information_clause_expanded">"Podane dane będą podlegały zautomatyzowanemu podejmowaniu decyzji (profilowanie) w celu przygotowania i prezentowania spersonalizowanej oferty promocyjnej. Podanie danych osobowych oznaczonych jako dobrowolne oznacza wyrażenie zgody na ich przetwarzanie w celu lepszego dopasowania Programu i ofert promocyjnych do Ciebie. Zgodę można wycofać w dowolnym czasie usuwając dane ze swojego konta, co nie wpływa na zgodność z prawem przetwarzania dokonanego przed jej wycofaniem.
Więcej informacji o przetwarzaniu danych osobowych i Twoich prawach zawiera „Polityka prywatności” dostępna pod adresem: www.zabka.pl/aplikacja-regulamin."</string>
    <string name="registration_information_clause_short">Administratorem danych osobowych jest Żabka Polska sp. z o.o. z siedzibą w Poznaniu (61-894 Poznań), Plac Andersa 7, kontakt@zappka.pl. Twoje dane osobowe będą przetwarzane w celu udziału w Programie „żappka”, w tym obsługi konta w aplikacji, naliczania Żappsów, odbierania nagród oraz rozpatrywania reklamacji.</string>
    <string name="registration_submit_button">Dalej</string>
    <string name="registration_subtitle">Uzupełnij informacje dotyczące Twojego konta, aby zarejestrować się w aplikacji.</string>
    <string name="registration_title">Dołącz teraz</string>
    <string name="settings_logout">Wyloguj się</string>
    <string name="settings_title">Ustawienia</string>
    <string name="terms_agree_button">Akceptuję</string>
    <string name="terms_description">Rejestrując się akceptujesz treść Regulaminu i Politykę Prywatności.</string>
    <string name="terms_title">Zasady świadczenia usług</string>
    <string name="terms_view_terms_button">Zapoznaj się</string>
    <string name="welcome_already_have_account">Masz już konto?</string>
    <string name="welcome_connect_with_facebook">Połącz z Facebookiem</string>
    <string name="welcome_description">Utwórz nowe konto lub zaloguj się za pomocą istniejącego konta.</string>
    <string name="welcome_sign_in">Zaloguj się</string>
    <string name="welcome_sign_up">Dołącz teraz</string>
    <string name="welcome_take_a_look">Take a look</string>
    <string name="welcome_title">Rozpocznij!</string>
</resources>