<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/rootView" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <android.support.design.widget.AppBarLayout android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" android:id="@id/appBarLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <android.support.design.widget.CollapsingToolbarLayout android:id="@id/collapsingLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize" app:expandedTitleMarginEnd="@dimen/spacing_lg" app:expandedTitleMarginStart="@dimen/spacing_lg" app:layout_scrollFlags="exitUntilCollapsed|scroll" app:titleEnabled="false" style="@style/Widget.Zabka.CollapsingToolbar">
                <View android:id="@id/imageViewCollapsing" android:layout_width="fill_parent" android:layout_height="120.0dip" app:layout_collapseMode="parallax" />
                <LinearLayout android:layout_gravity="top" android:orientation="vertical" android:id="@id/titleContainer" android:paddingTop="@dimen/spacing_lg" android:paddingBottom="@dimen/spacing_lg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="?actionBarSize" app:layout_collapseMode="pin">
                    <TextView android:id="@id/titleTv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/registration_title" android:layout_marginStart="@dimen/spacing_lg" android:layout_marginEnd="@dimen/spacing_lg" style="@style/Widget.Zabka.Header.White" />
                    <TextView android:textSize="18.0sp" android:id="@id/subtitleTv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm" android:text="@string/registration_subtitle" android:layout_marginStart="@dimen/spacing_lg" android:layout_marginEnd="@dimen/spacing_lg" app:fontFamily="@font/tt_commons_regular" style="@style/Widget.Zabka.Cover.Subtitle" />
                </LinearLayout>
                <android.support.v7.widget.Toolbar android:theme="@style/Theme.Zabka.Toolbar.Light" android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:contentInsetStartWithNavigation="0.0dip" app:layout_collapseMode="pin" app:navigationIcon="@drawable/ic_header_cross">
                    <TextView android:layout_gravity="center_vertical" android:id="@id/titleCollapsedTv" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/registration_title" android:lines="1" android:alpha="0.0" style="@style/Widget.Zabka.Header.White.Collapsed" />
                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView android:id="@id/scrollView" android:background="@color/background_light" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <android.support.constraint.ConstraintLayout android:paddingBottom="@dimen/spacing_md" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="70.0dip">
                <FrameLayout android:id="@id/registrationContent" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <ProgressBar android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_md" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/registrationContent" />
                <pl.zabka.b2c.widgets.AgreementView android:id="@id/emailMarketingAgreement" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_lg" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:expandedAgreement="@string/registration_agreement_marketing_email_expanded" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/loading" app:shortAgreement="@string/registration_agreement_marketing_email_short" />
                <pl.zabka.b2c.widgets.AgreementView android:id="@id/thirdPartiesExpandedAgreement" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_lg" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:expandedAgreement="@string/registration_agreement_marketing_third_parties_expanded" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/emailMarketingAgreement" app:shortAgreement="@string/registration_agreement_marketing_third_parties_short" />
                <pl.zabka.b2c.widgets.AgreementView android:id="@id/informationClause" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_lg" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:expandedAgreement="@string/registration_information_clause_expanded" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/thirdPartiesExpandedAgreement" app:shortAgreement="@string/registration_information_clause_short" app:showSwitch="false" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
    <TextView android:enabled="false" android:layout_gravity="bottom" android:id="@id/submitButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/registration_submit_button" style="@style/Widget.Zabka.RectButton" />
</LinearLayout>