<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@id/rootView" android:background="@color/background_light" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.chip.Chip android:id="@id/takeALookButton" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_md" android:text="@string/welcome_take_a_look" android:layout_marginEnd="@dimen/spacing_lg" app:chipBackgroundColor="@color/welcome_chip_background" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.Zabka.Chip" />
    <ImageView android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_md" android:layout_marginBottom="@dimen/spacing_md" android:src="@drawable/ic_logo_zappka_welcome" app:layout_constraintBottom_toTopOf="@id/connectWithFacebookButton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.3" />
    <TextView android:gravity="center" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/welcome_title" android:layout_marginStart="@dimen/spacing_xl" android:layout_marginEnd="@dimen/spacing_xl" app:layout_constraintBottom_toTopOf="@id/description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/logo" app:layout_constraintVertical_chainStyle="packed" style="@style/Widget.Zabka.Header" />
    <TextView android:textColor="@color/text_primary" android:gravity="center" android:id="@id/description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_sm" android:text="@string/welcome_description" android:layout_marginStart="@dimen/spacing_xl" android:layout_marginEnd="@dimen/spacing_xl" app:layout_constraintBottom_toTopOf="@id/connectWithFacebookButton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/Widget.Zabka.Description" />
    <android.support.design.button.MaterialButton android:id="@id/connectWithFacebookButton" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/welcome_connect_with_facebook" android:layout_marginStart="@dimen/spacing_xl" android:layout_marginEnd="@dimen/spacing_xl" app:backgroundTint="@color/facebook" app:layout_constraintBottom_toTopOf="@id/signUpButton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Widget.Zabka.Button" />
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_signup_facebook" android:layout_marginStart="@dimen/spacing_xl" android:translationZ="8.0dip" app:layout_constraintBottom_toBottomOf="@id/connectWithFacebookButton" app:layout_constraintStart_toStartOf="@id/connectWithFacebookButton" app:layout_constraintTop_toTopOf="@id/connectWithFacebookButton" />
    <android.support.design.button.MaterialButton android:id="@id/signUpButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_lg" android:text="@string/welcome_sign_up" android:layout_marginStart="@dimen/spacing_xl" android:layout_marginEnd="@dimen/spacing_xl" app:layout_constraintBottom_toTopOf="@id/alreadyHaveAccount" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Widget.Zabka.Button" />
    <TextView android:textSize="@dimen/base_text_size" android:textColor="@color/text_secondary" android:id="@id/alreadyHaveAccount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip" android:text="@string/welcome_already_have_account" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/signInButton" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" />
    <android.support.design.button.MaterialButton android:id="@id/signInButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_sign_in" android:paddingStart="@dimen/spacing_sm" android:paddingEnd="@dimen/spacing_sm" app:fontFamily="@font/tt_commons_bold" app:layout_constraintBottom_toBottomOf="@id/alreadyHaveAccount" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/alreadyHaveAccount" app:layout_constraintTop_toTopOf="@id/alreadyHaveAccount" style="@style/Widget.Zabka.Button.TextButton" />
</android.support.constraint.ConstraintLayout>