<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@drawable/background_light_top_rounded" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:layout_marginTop="@dimen/spacing_sm" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.Zabka.SwipeLine.Horizontal" />
    <TextView android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/terms_title" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.Zabka.Header" />
    <TextView android:gravity="center" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_lg" android:text="@string/terms_description" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:layout_constraintTop_toBottomOf="@id/title" style="@style/Widget.Zabka.Description" />
    <android.support.design.button.MaterialButton android:textStyle="bold" android:textColor="@color/brand_color" android:id="@id/viewTermsButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xl" android:text="@string/terms_view_terms_button" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:layout_constraintTop_toBottomOf="@id/description" style="@style/Widget.Zabka.Button.Empty" />
    <android.support.design.button.MaterialButton android:textStyle="bold" android:id="@id/agreeTermsButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xsm" android:text="@string/terms_agree_button" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:backgroundTint="@color/brand_color" app:layout_constraintTop_toBottomOf="@id/viewTermsButton" style="@style/Widget.Zabka.Button" />
    <ProgressBar android:id="@id/loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_md" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/agreeTermsButton" />
    <TextView android:textColor="@color/text_secondary_light" android:id="@id/cancelButton" android:background="@drawable/auth_submit_button_disabled" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_lg" android:text="@string/cancel" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/loading" app:layout_constraintVertical_bias="1.0" style="@style/Widget.Zabka.RectButton" />
</android.support.constraint.ConstraintLayout>