<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:id="@id/appBarLayout" android:layout_width="fill_parent" android:layout_height="@dimen/toolbar_height" app:layout_constraintTop_toTopOf="parent">
        <android.support.v7.widget.Toolbar android:theme="@style/Theme.Zabka.Toolbar.Light" android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_collapseMode="pin" app:navigationIcon="@drawable/ic_header_cross" />
        <TextView android:textColor="@color/text_primary_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_title" android:layout_marginStart="@dimen/spacing_pre_xl" style="@style/Widget.Zabka.Header" />
    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.RecyclerView android:id="@id/settingsOptions" android:layout_width="fill_parent" android:layout_height="0.0dip" android:overScrollMode="never" app:layoutManager="android.support.v7.widget.LinearLayoutManager" app:layout_constraintBottom_toTopOf="@id/logoutButton" app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
    <android.support.design.button.MaterialButton android:layout_gravity="bottom" android:id="@id/logoutButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_xxl" android:layout_marginBottom="@dimen/spacing_xsm" android:text="@string/settings_logout" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:layout_constraintBottom_toTopOf="@id/appVersion" style="@style/Widget.Zabka.Button" />
    <TextView android:textColor="@color/text_secondary" android:gravity="center" android:id="@id/appVersion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_md" android:text="@string/app_version" android:layout_marginStart="@dimen/base_screen_margin_lg" android:layout_marginEnd="@dimen/base_screen_margin_lg" app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>